--- a/app/assets/stylesheets/donuts.scss
+++ b/app/assets/stylesheets/donuts.scss
@@ -1,3 +1,8 @@
 // Place all the styles related to the donuts controller here.
 // They will automatically be included in application.css.
 // You can use Sass (SCSS) here: http://sass-lang.com/
+
+.donutGrid {
+  width: 1000px;
+  height: 450px;
+}
