--- a/app/views/donuts/index.html.erb
+++ b/app/views/donuts/index.html.erb
@@ -2,35 +2,11 @@
 
 <h1>Listing Donuts</h1>
 
-<table>
-  <thead>
-    <tr>
-      <th>Flavor</th>
-      <th>Calories</th>
-      <th>Brand</th>
-      <th>Shape</th>
-      <th>Title</th>
-      <th>Country</th>
-      <th colspan="3"></th>
-    </tr>
-  </thead>
-
-  <tbody>
-    <% @donuts.each do |donut| %>
-      <tr>
-        <td><%= donut.flavor %></td>
-        <td><%= donut.calories %></td>
-        <td><%= donut.brand %></td>
-        <td><%= donut.shape %></td>
-        <td><%= donut.title %></td>
-        <td><%= donut.country %></td>
-        <td><%= link_to 'Show', donut %></td>
-        <td><%= link_to 'Edit', edit_donut_path(donut) %></td>
-        <td><%= link_to 'Destroy', donut, method: :delete, data: { confirm: 'Are you sure?' } %></td>
-      </tr>
-    <% end %>
-  </tbody>
-</table>
+<div ng-app="donutApp">
+  <div ng-controller="indexController">
+    <div ui-grid="gridOptions" class="donutGrid"></div>
+  </div>
+</div>
 
 <br>
 
