Add basic editing functionality

--- a/app/views/donuts/index.html.erb
+++ b/app/views/donuts/index.html.erb
@@ -4,7 +4,7 @@
 
 <div ng-app="donutApp">
   <div ng-controller="indexController">
-    <div ui-grid="gridOptions" class="donutGrid"></div>
+    <div ui-grid="gridOptions" ui-grid-edit class="donutGrid"></div>
   </div>
 </div>
 
