remove unnecessary form attrs

--- a/app/views/donuts/index.html.erb
+++ b/app/views/donuts/index.html.erb
@@ -11,7 +11,7 @@
           <li>{{e}}</li>
         </div>
       </ul>
-        <form novalidate class="simple-form">
+        <form>
           <table><tbody>
             <tr>
               <td>Title:</td>
